--- a/about.html
+++ b/about.html
@@ -55,7 +55,6 @@
         </div>
     </div>
     <div class="container">
-  <h2>Resume</h2>
   <ul class="nav nav-pills">
     <li class="active"><a data-toggle="pill" href="#home">Education</a></li>
     <li><a data-toggle="pill" href="#menu1">Work Experience</a></li>
@@ -70,7 +69,8 @@
           <img src="http://www.ncssm.edu/2015website/sites/default/files/StackedLogo_fullColor_3in.jpg" class="img-responsive">
            </div>
           <div class="col-xs-6">
-              <p><em>North Carolina School of Science and Mathematics is the nation’s first public residential high school specializing in science, technology, engineering, and math. We challenge talented high school juniors and seniors from across North Carolina through a residential program on our historic campus in Durham, an extensive online program, and summer offerings on our campus and across the state. NCSSM is committed to giving back to our communities through the time, talents, and resources of our world-class educators, dedicated staff, and students. Founded in 1980, NCSSM has become the model for 18 such specialized schools around the globe. Our 8,000-plus alumni include local and global leaders in medicine, technology, commerce, education, and the arts. Together we form a community of problem solvers who aim to build a brighter future.</em></p>
+              <h1>Unicorn</h1>
+              <h3>2006</h3>
               </div>
           </div>
         <div class="row vcenter">
@@ -78,7 +78,8 @@
                 <img src="http://www.kenan-flagler.unc.edu/brand/img/unc-blue.jpg" class="img-responsive">
             </div>
             <div class="col-xs-6">
-                <p><em>At UNC Kenan-Flagler Business School, we shape principled leaders who drive extraordinary results for both the bottom line and the greater good. Through expert faculty and world-class programs that combine challenging academic rigor and essential real-life learning experiences, our students develop the knowledge and leadership qualities required to envision, inspire and execute meaningful change. As graduates they join a worldwide network of engaged, influential alumni whose careers and accomplishments impact the global business landscape of today and tomorrow.</em></p>
+               <h1>Bachelors of Science in Business Administration</h1>
+                <h3>2010</h3>
             </div>
         
         </div>
@@ -87,20 +88,18 @@
                 <img src="ecu_logo.png" class="img-responsive">
             </div>
             <div class="col-xs-6">
-                <p><em>At ECU, our highest priority is the excellence of our engineering program and we achieve this through small engineering classes taught by faculty (not graduate students), project based learning, and high faculty-student interaction.
-
-                    ECU Engineering prepares our graduates for 21st century engineering challenges. We believe successful engineers must have a broad base of technical skills to assure they can meet the engineering challenges of the future.</em>
-</p>
+                <h1>Electrical Engineering</h1>
+                <h3>Enrolled</h3>
             </div>
         </div>
     </div>
     <div id="menu1" class="tab-pane fade">
-      <h3>Go-Science</h3>
+        <h3>East Carolina University</h3>
+        <p>Teaching Assistant</p>
+        <h3>Go-Science</h3>
         <p>Intern</p>
         <h3>Pirate Tutoring Center</h3>
-        <p>Lead Tutor</p>
-        <h3>Upswing.com</h3>
-        <p>Tutor</p>
+        <p>Volunteer Tutor</p>
         <h3>Sound Feet Shoes</h3>
         <p>Sales Associate</p>
         <h3>Tommy's Natural Foods Market</h3>
@@ -120,15 +119,12 @@
         <h3>Pepsi Bottling Ventures</h3>
         <p>Delivery Assistant</p>
     </div>
-    <div id="menu2" class="tab-pane fade">
-      <h3>OSX</h3>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-        <h3>Windows</h3>
-        <h3>Microsoft Office</h3>
+    <div id="menu2" class="tab-pane fade">     
         <h3>Matlab</h3>
         <h3>HTML</h3>
         <h3>CSS</h3>
-        <h3>Bootstrap</h3>
+        <h3>Javascript</h3>
+        <h3>Twitter Bootstrap</h3>
         <h3>Solidworks</h3>
     </div>
     <div id="menu3" class="tab-pane fade">
@@ -140,17 +136,15 @@
 </div>
 
       </div>      
-   <!------Footer!------->
+ 
       <footer class="footer">
       <div class="container">
           <p><em>The worst thing to call somebody is crazy. It's dismissive. ~ Chappelle</em>
 </p>
-          <p>June 2015</p>
+          <p>September 2015</p>
          </div>
       </footer>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script>$("#linkload").load("linkload.html");</script>
