--- a/about.html
+++ b/about.html
@@ -64,34 +64,35 @@
   
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
-      <div class="row vcenter">
-       <div class="col-xs-6">
-          <img src="http://www.ncssm.edu/2015website/sites/default/files/StackedLogo_fullColor_3in.jpg" class="img-responsive">
-           </div>
-          <div class="col-xs-6">
-              <h1>Unicorn</h1>
-              <h3>2006</h3>
-              </div>
-          </div>
+      
         <div class="row vcenter">
             <div class="col-xs-6">
-                <img src="http://www.kenan-flagler.unc.edu/brand/img/unc-blue.jpg" class="img-responsive">
+                <img src="http://www.kenan-flagler.unc.edu/brand/img/unc-blue.jpg" class="img-responsive center-block">
             </div>
             <div class="col-xs-6">
-               <h1>Bachelors of Science in Business Administration</h1>
-                <h3>2010</h3>
+               <h2>Bachelor of Science in Business Administration</h2>
+                <h4>2010</h4>
             </div>
         
         </div>
         <div class="row vcenter">
             <div class="col-xs-6">
-                <img src="ecu_logo.png" class="img-responsive">
+                <img src="ecu_logo.png" class="img-responsive center-block">
             </div>
             <div class="col-xs-6">
-                <h1>Electrical Engineering</h1>
-                <h3>Enrolled</h3>
+                <h2>Electrical Engineering</h2>
+                <h4>Enrolled</h4>
             </div>
         </div>
+        <div class="row vcenter">
+       <div class="col-xs-6">
+          <img src="http://www.ncssm.edu/2015website/sites/default/files/StackedLogo_fullColor_3in.jpg" class="img-responsive center-block">
+           </div>
+          <div class="col-xs-6">
+              <h2>Unicorn</h2>
+              <h4>2006</h4>
+              </div>
+          </div>
     </div>
     <div id="menu1" class="tab-pane fade">
         <h3>East Carolina University</h3>
