--- a/index.html
+++ b/index.html
@@ -63,11 +63,15 @@
             <p>Thanks.</p>
             <img src="Pictures/tallbike.jpeg" class="img-responsive">
             <p>I recently took a trip to Texas. Thanks to Swann and Jordan for hosting me.</p>
-            <a class="btn btn-info" href="texasShots.html">Check it out</a>
+            <a class="btn btn-info center-block" href="texasShots.html">Check it out</a>
+            <img src="Pictures/sombrero.jpeg" class="img-responsive">
         </div>
         <div class="col-md-6">
-            <h3>The 4th</h3>
-            <img src="Pictures/sombrero.jpeg" class="img-responsive">
+            <h3>Let it go</h3>
+            <div class="embed-responsive embed-responsive-16by9">
+                 <iframe src="https://www.youtube.com/embed/2bSAPFkxJKg" frameborder="0" allowfullscreen></iframe>
+            </div>
+            
             <p>Turning and turning in the widening gyre
     The falcon cannot hear the falconer;
     Things fall apart; the centre cannot hold;
