--- a/linkload.html
+++ b/linkload.html
@@ -9,3 +9,6 @@
 <li class="dropdown-header">Digital Electronics</li>
 <li><a href="secretNumber.html">Secret Number</a></li>
 <li><a href="zelda.html">Zelda</a></li>
+<li class="dropdown-header">Microcontrollers</li>
+<li><a href="segCounter.html">Seven Segment Counter</a></li>
+<li><a href="assemblyDelay.html">Delay Subroutine</a></li>
