--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head id="headloader">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,8 +8,6 @@
     <meta name="author" content="Lindsey">
     <title>Home</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
     <link href="custom.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> 
 
@@ -25,7 +23,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Lindsey Aaron Erps</a>
+            <a class="navbar-brand" href="#">Lindsey Aaron Erps</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -50,7 +48,7 @@
 <div class="container">
     <div class="page-header">
       <div class="jumbotron text-center">
-          <h1><b>Welcome</b></h1>
+          <h1><b>Hi!</b></h1>
           
         </div>
     </div>
@@ -59,12 +57,11 @@
       <div class="container">
       <div class="row">
         <div class="col-md-6">
-            <h3>#JonVoyage</h3>
-            <p>Thanks.</p>
+            <h3>Tx</h3>
             <img src="Pictures/tallbike.jpeg" class="img-responsive">
             <p>I recently took a trip to Texas. Thanks to Swann and Jordan for hosting me.</p>
             <a class="btn btn-info center-block" href="texasShots.html">Check it out</a>
-            <img src="Pictures/sombrero.jpeg" class="img-responsive">
+            
         </div>
         <div class="col-md-6">
             <h3>Let it go</h3>
@@ -116,5 +113,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script>$("#linkload").load("linkload.html");</script>
+    <script>$("#headloader").load("healoader.html");</script>
   </body>
 </html>
