--- a/secretNumber.html
+++ b/secretNumber.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head id="headloader">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,8 +8,6 @@
     <meta name="author" content="Lindsey">
     <title>Secret Number</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
     <link href="custom.css" rel="stylesheet">
      
   </head>
@@ -92,7 +90,7 @@
     });    
 })</script>
 <script>$("#linkload").load("linkload.html");</script>
-
+<script>$("#headloader").load("healoader.html");</script>
 
 </body>
 </html>
