--- a/linkload.html
+++ b/linkload.html
@@ -12,3 +12,5 @@
 <li class="dropdown-header">Microcontrollers</li>
 <li><a href="segCounter.html">Seven Segment Counter</a></li>
 <li><a href="assemblyDelay.html">Delay Subroutine</a></li>
+<li><a href="firstInterrupt.html">Interrupt</a></li>
+<li><a href="stopwatch.html">Stopwatch</a></li>
