--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
+<div class="donkey">      
 <div class="container">
     <div class="page-header">
       <div class="jumbotron text-center">
           <h1><b>Hi!</b></h1>
-          
-        </div>
-    </div>
       </div>
+    </div>
+</div>
+</div>
     
       <div class="container">
       <div class="row">
