--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
  
       <footer class="footer">
       <div class="container">
-          <p><em>The worst thing to call somebody is crazy. It's dismissive.</em></p>
+          <p class="foot"><em>The worst thing to call somebody is crazy. It's dismissive.</em></p>
           <p>September 2015</p>
       </div>
       </footer>
