--- a/assemblyDelay.html
+++ b/assemblyDelay.html
@@ -62,7 +62,7 @@
       <footer class="footer">
       <div class="container">
           
-          <p><em>You may delay, but time will not.</em></p>
+          <p class="foot"><em>You may delay, but time will not.</em></p>
          <p>September 2015</p>
          </div>
       </footer>
