--- a/firstInterrupt.html
+++ b/firstInterrupt.html
@@ -62,7 +62,7 @@
       <footer class="footer">
       <div class="container">
           
-          <p><em>I haven't spoken to my wife in years. I didn't want to interrupt her.</em></p>
+          <p class="foot"><em>I haven't spoken to my wife in years. I didn't want to interrupt her.</em></p>
          <p>September 2015</p>
          </div>
       </footer>
