--- a/lightTheremin.html
+++ b/lightTheremin.html
@@ -71,7 +71,7 @@
       <footer class="footer">
       <div class="container">
           
-          <p><em> We often refuse to accept an idea merely because the tone of voice in which it has been expressed is unsympathetic to us.</em></p>
+          <p class="foot"><em> We often refuse to accept an idea merely because the tone of voice in which it has been expressed is unsympathetic to us.</em></p>
          <p>June 2015</p>
          </div>
       </footer>
