--- a/project0.html
+++ b/project0.html
@@ -87,7 +87,7 @@
       <footer class="footer">
       <div class="container">
           
-          <p><em>Hello, World!</em></p>
+          <p class="foot"><em>Hello, World!</em></p>
          <p>September 2015</p>
          </div>
       </footer>
