--- a/secretNumber.html
+++ b/secretNumber.html
@@ -64,7 +64,7 @@
    <!------Footer!------->
       <footer class="footer">
       <div class="container">
-          <p>"<em>When you ain't got no money, you gotta get an attitude.</em>" ~ Pryor</p>
+          <p class="foot">"<em>When you ain't got no money, you gotta get an attitude.</em>" ~ Pryor</p>
           <p>June 2015</p>
          </div>
       </footer>
