--- a/segCounter.html
+++ b/segCounter.html
@@ -74,7 +74,7 @@
       <footer class="footer">
       <div class="container">
           
-          <p><em>When angry count to ten before you speak. If very angry, count to one hundred.</em></p>
+          <p class="foot"><em>When angry count to ten before you speak. If very angry, count to one hundred.</em></p>
          <p>September 2015</p>
          </div>
       </footer>
