--- a/texasShots.html
+++ b/texasShots.html
@@ -340,7 +340,7 @@
       <footer class="footer">
       <div class="container">
           
-          <p><em> Freedom's just another word for nothin' left to lose.</em></p>
+          <p class="foot"><em> Freedom's just another word for nothin' left to lose.</em></p>
          <p>July 2015</p>
          </div>
       </footer>
