--- a/zelda.html
+++ b/zelda.html
@@ -64,7 +64,7 @@
    <!------Footer!------->
       <footer class="footer">
       <div class="container">
-          <p>"<em>There are nights when the wolves are silent and only the moon howls.</em>" ~ Carlin</p>
+          <p class="foot">"<em>There are nights when the wolves are silent and only the moon howls.</em>" ~ Carlin</p>
           <p>June 2015</p>
          </div>
       </footer>
