--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
       <div class="container">
       <div class="row">
         <div class="col-md-6">
+            <h3>QL200</h3>
+            <img src="Pictures/lcdName.jpg" class = "img-responsive">
             <h3>Tx</h3>
             <img src="Pictures/tallbike.jpeg" class="img-responsive">
             <p>I recently took a trip to Texas. Thanks to Swann and Jordan for hosting me.</p>
@@ -67,7 +69,7 @@
         <div class="col-md-6">
             <h3>Let it go</h3>
             <div class="embed-responsive embed-responsive-16by9">
-                 <iframe src="https://www.youtube.com/embed/2bSAPFkxJKg" frameborder="0" allowfullscreen></iframe>
+                 <iframe src="https://www.youtube.com/embed/akwfarw4XxE" frameborder="0" allowfullscreen></iframe>
             </div>
             
             <p>Turning and turning in the widening gyre
@@ -102,7 +104,7 @@
      <footer class="footer">
       <div class="container text-center">
      <i class="fa fa-rebel"></i>
-          <p>August 2015</p>
+          <p>Fall 2015</p>
           <div class="row">
               <a href="https://github.com/marioIncandeza"><i class="fa fa-github-square fa-lg"></i></a>
           </div>
