--- a/zoetrope.html
+++ b/zoetrope.html
@@ -71,7 +71,7 @@
       <footer class="footer">
       <div class="container">
           
-          <p>"<em> I had to stop drinking, cause I got tired of waking in my car driving 90.</em>" ~ Pryor</p>
+          <p class="foot">"<em> I had to stop drinking, cause I got tired of waking in my car driving 90.</em>" ~ Pryor</p>
          <p>June 2015</p>
          </div>
       </footer>
