--- a/linkload.html
+++ b/linkload.html
@@ -1,4 +1,6 @@
 <li><a href="tempalarm.html">Temperature Alarm</a></li>
+<li><a href="transmissionLineParameters.html">Transmission Line Parameters</a></li>
+<li><a href="transmissionOperation.html">Transmission Line Operation</a></li>
 <li class="dropdown-header">Arduino Projects</li>
 <li><a href="Pinwheel.html">Pinwheel</a></li>
 <li><a href="zoetrope.html">Zoetrope</a></li>
@@ -14,7 +16,10 @@
 <li><a href="firstInterrupt.html">Interrupt</a></li>
 <li><a href="stopwatch.html">Stopwatch</a></li>
 <li><a href="dialer.html">Phone Dialer</a></li>
+<li><a href="twinkle.html">Twinkle</a></li>
+<li><a href="patientPosition.html">Patient Position</a></li>
 <li class="dropdown-header">Electronics</li>
 <li><a href="project0.html">Project 0</a></li>
 <li><a href="thevenin.html">Thevenin Review</a></li>
 <li><a href="test1RevisionElectronics.html">Op Amp DC Imperfections</a></li>
+<li><a href="triangleLed.html">Project 1</a></li>
